# signal-hound-recorder

./: .gitignore  .gitmodules  README.md  generate-eclipse-project.sh
3rdparty-official-api/: install.sh
src/: CMakeLists.txt
src/shr/: CMakeLists.txt  communication.cpp  communication.hpp  emulated-device.cpp  emulated-device.hpp  file-sink.cpp  file-sink.hpp  main.cpp  monitor.cpp  monitor.hpp  recorder.cpp  recorder.hpp  sh-device.cpp  sh-device.hpp
utils/: plot-file.py
